firefox socialmedia div layout bug fix

--- a/css/socialMedia.css
+++ b/css/socialMedia.css
@@ -2,6 +2,9 @@
     flex: 1;
     /* background-color: yellow; */
 
+    height: auto;
+    width: 0;
+
     display: flex;
     flex-direction: row-reverse;
 
